--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Momo Mx</title>
+    <title>Rubio Arquitectos</title>
     <link rel="stylesheet" href="styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -17,19 +17,20 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Momo Mx</a>
+                <a class="navbar-brand" href="#">Rubio <span class="arquitectos">Arquitectos</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark ">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
+                            <a class="nav-link" href="#">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Diseño arquitectonico</a>
+                            <a class="nav-link" href="#">Arquitectura</a>
                         </li>
 
                         <li class="nav-item">
@@ -77,22 +78,22 @@
                 </div>
 
                 <div class="carousel-item active" data-bs-interval="3000">
-                    <img src="images/imgheader/img1.png" class="d-block w-100" alt="First slide">
+                    <img src="images/imgheader/img1.png" class="d-block w-100 img-fluid" alt="First slide">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="images/imgheader/img2.jpg" class="d-block w-100" alt="Second slide">
+                    <img src="images/imgheader/img2.jpg" class="d-block w-100 img-fluid" alt="Second slide">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="images/imgheader/img3.JPG" class="d-block w-100" alt="Third slide">
+                    <img src="images/imgheader/img3.JPG" class="d-block w-100 img-fluid" alt="Third slide">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="images/imgheader/img4.JPG" class="d-block w-100" alt="Forth slide">
+                    <img src="images/imgheader/img4.JPG" class="d-block w-100 img-fluid" alt="Forth slide">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="images/imgheader/img5.jpg" class="d-block w-100" alt="Fifth slide">
+                    <img src="images/imgheader/img5.jpg" class="d-block w-100 img-fluid" alt="Fifth slide">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="images/imgheader/img6.jpg" class="d-block w-100" alt="Sixth slide">
+                    <img src="images/imgheader/img6.jpg" class="d-block w-100 img-fluid" alt="Sixth slide">
                 </div>
 
             </div>
